benchmark-results/8/merge/cseq/concurrentwitness2test.2024-11-27_10-15-16.logfiles/SV-COMP23_unreach-call.cseq-safe003_power.oepc_pso.oepc_pso.opt_rmo.oepc_rmo.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe003_power.oepc_pso.oepc_pso.opt_rmo.oepc_rmo.opt.yml/safe003_power.oepc_pso.oepc_pso.opt_rmo.oepc_rmo.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe003_power.oepc_pso.oepc_pso.opt_rmo.oepc_rmo.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_gvqs8lth/tmp/tmpcdsa05e2.c
Compilation started
/tmp/BenchExec_run_gvqs8lth/tmp/tmpcdsa05e2.c: In function ‘P2’:
/tmp/BenchExec_run_gvqs8lth/tmp/tmpcdsa05e2.c:618:19: error: ‘FALSE’ undeclared (first use in this function)
  618 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_gvqs8lth/tmp/tmpcdsa05e2.c:618:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_gvqs8lth/tmp/tmpcdsa05e2.c: In function ‘main’:
/tmp/BenchExec_run_gvqs8lth/tmp/tmpcdsa05e2.c:704:19: error: ‘FALSE’ undeclared (first use in this function)
  704 |   weak$$choice0 = FALSE;;
      |                   ^~~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
